tests/init/pos/soundness5.scala
class Foo {
  var a: Int = h()
  def h(): Int = g()
  def g(): Int = h()
}