tests/init/neg/freedom/tolerant-boundary/parent_1.scala
class Base {
  val a: Int = 10
  def foo: Int = a * a
}